test/pass/closures/close_loop_with_inner_closure.lily
define f[A](a: A...) {  }

define bug {
    var lst = [""]
    for i in 0...0: {
        var a = 1
        f(a, a, a, a)
        lst.each(|e| a += 1 )
    }
}

bug()
